// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<UserMenu /> should render additional links when logged in and new services are enabled 1`] = `
<Provider
  store={
    {
      "@@observable": [Function],
      "dispatch": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <UserMenu
    entries={null}
    isLoggedIn={true}
    logout={[Function]}
    user={null}
  >
    <Portal
      name="user-menu.container.before"
      props={
        {
          "entries": null,
          "handleLogout": [Function],
          "isLoggedIn": true,
          "logout": [Function],
          "user": null,
        }
      }
    />
    <Portal
      name="user-menu.container"
      props={
        {
          "entries": null,
          "handleLogout": [Function],
          "isLoggedIn": true,
          "logout": [Function],
          "user": null,
        }
      }
    >
      <LoggedIn
        logout={[Function]}
      >
        <SurroundPortals
          portalName="nav-menu.my-account"
          portalProps={
            {
              "Item": [Function],
            }
          }
        >
          <div
            data-test-id="userMenu"
          >
            <Section
              title="navigation.your_account"
            >
              <Headline
                style={
                  {
                    "margin": "24px 20px 16px",
                  }
                }
                tag="h2"
                text="navigation.your_account"
              >
                <Typography
                  align="inherit"
                  className="sg-1ivqote-root headline theme__headline"
                  component="h2"
                  data-test-id="Headline"
                  style={
                    {
                      "margin": "24px 20px 16px",
                    }
                  }
                  variant="h2"
                >
                  <h2
                    className="sg-1ivqote-root headline theme__headline"
                    data-test-id="Headline"
                    style={
                      {
                        "margin": "24px 20px 16px",
                      }
                    }
                  >
                    <Text
                      acceptPlainTextWithPlaceholders={false}
                      className={null}
                      params={{}}
                      role={null}
                      string="navigation.your_account"
                      transform={null}
                    >
                      navigation.your_account
                    </Text>
                  </h2>
                </Typography>
              </Headline>
              <div
                className="sg-1sqpupb-list"
                data-test-id="more-section-list"
              >
                <MoreMenuItem
                  className={null}
                  href="/account/profile"
                  label="navigation.profile"
                  onClick={null}
                  testId="accountButton"
                >
                  <Link
                    className="sg-10l03g-root"
                    href="/account/profile"
                    role="button"
                  >
                    <Text
                      acceptPlainTextWithPlaceholders={false}
                      className={null}
                      params={{}}
                      role={null}
                      string="navigation.profile"
                      transform={null}
                    >
                      navigation.profile
                    </Text>
                  </Link>
                </MoreMenuItem>
                <MoreMenuItem
                  className={null}
                  href="/account/orders"
                  label="navigation.order_history"
                  onClick={null}
                  testId="accountButton"
                >
                  <Link
                    className="sg-10l03g-root"
                    href="/account/orders"
                    role="button"
                  >
                    <Text
                      acceptPlainTextWithPlaceholders={false}
                      className={null}
                      params={{}}
                      role={null}
                      string="navigation.order_history"
                      transform={null}
                    >
                      navigation.order_history
                    </Text>
                  </Link>
                </MoreMenuItem>
                <MoreMenuItem
                  className={null}
                  href="/account/wish-list"
                  label="navigation.favorites"
                  onClick={null}
                  testId="accountButton"
                >
                  <Link
                    className="sg-10l03g-root"
                    href="/account/wish-list"
                    role="button"
                  >
                    <Text
                      acceptPlainTextWithPlaceholders={false}
                      className={null}
                      params={{}}
                      role={null}
                      string="navigation.favorites"
                      transform={null}
                    >
                      navigation.favorites
                    </Text>
                  </Link>
                </MoreMenuItem>
                <SurroundPortals
                  portalName="nav-menu.logout"
                  portalProps={
                    {
                      "Item": [Function],
                    }
                  }
                >
                  <MoreMenuItem
                    className={null}
                    href={null}
                    label="navigation.logout"
                    onClick={[Function]}
                    testId="logoutButton"
                  >
                    <button
                      className="sg-10l03g-root"
                      data-test-id="logoutButton"
                      onClick={[Function]}
                      type="button"
                    >
                      <Text
                        acceptPlainTextWithPlaceholders={false}
                        className={null}
                        params={{}}
                        role={null}
                        string="navigation.logout"
                        transform={null}
                      >
                        navigation.logout
                      </Text>
                    </button>
                  </MoreMenuItem>
                </SurroundPortals>
              </div>
            </Section>
          </div>
        </SurroundPortals>
      </LoggedIn>
    </Portal>
    <Portal
      name="user-menu.container.after"
      props={
        {
          "entries": null,
          "handleLogout": [Function],
          "isLoggedIn": true,
          "logout": [Function],
          "user": null,
        }
      }
    />
  </UserMenu>
</Provider>
`;

exports[`<UserMenu /> should render as expected when the user is logged in 1`] = `
<Provider
  store={
    {
      "@@observable": [Function],
      "dispatch": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <UserMenu
    entries={null}
    isLoggedIn={true}
    logout={[MockFunction]}
    user={null}
  >
    <Portal
      name="user-menu.container.before"
      props={
        {
          "entries": null,
          "handleLogout": [MockFunction],
          "isLoggedIn": true,
          "logout": [MockFunction],
          "user": null,
        }
      }
    />
    <Portal
      name="user-menu.container"
      props={
        {
          "entries": null,
          "handleLogout": [MockFunction],
          "isLoggedIn": true,
          "logout": [MockFunction],
          "user": null,
        }
      }
    >
      <LoggedIn
        logout={[MockFunction]}
      >
        <SurroundPortals
          portalName="nav-menu.my-account"
          portalProps={
            {
              "Item": [Function],
            }
          }
        >
          <div
            data-test-id="userMenu"
          >
            <Section
              title="navigation.your_account"
            >
              <Headline
                style={
                  {
                    "margin": "24px 20px 16px",
                  }
                }
                tag="h2"
                text="navigation.your_account"
              >
                <Typography
                  align="inherit"
                  className="sg-1ivqote-root headline theme__headline"
                  component="h2"
                  data-test-id="Headline"
                  style={
                    {
                      "margin": "24px 20px 16px",
                    }
                  }
                  variant="h2"
                >
                  <h2
                    className="sg-1ivqote-root headline theme__headline"
                    data-test-id="Headline"
                    style={
                      {
                        "margin": "24px 20px 16px",
                      }
                    }
                  >
                    <Text
                      acceptPlainTextWithPlaceholders={false}
                      className={null}
                      params={{}}
                      role={null}
                      string="navigation.your_account"
                      transform={null}
                    >
                      navigation.your_account
                    </Text>
                  </h2>
                </Typography>
              </Headline>
              <div
                className="sg-1sqpupb-list"
                data-test-id="more-section-list"
              >
                <SurroundPortals
                  portalName="nav-menu.logout"
                  portalProps={
                    {
                      "Item": [Function],
                    }
                  }
                >
                  <MoreMenuItem
                    className={null}
                    href={null}
                    label="navigation.logout"
                    onClick={[MockFunction]}
                    testId="logoutButton"
                  >
                    <button
                      className="sg-10l03g-root"
                      data-test-id="logoutButton"
                      onClick={[MockFunction]}
                      type="button"
                    >
                      <Text
                        acceptPlainTextWithPlaceholders={false}
                        className={null}
                        params={{}}
                        role={null}
                        string="navigation.logout"
                        transform={null}
                      >
                        navigation.logout
                      </Text>
                    </button>
                  </MoreMenuItem>
                </SurroundPortals>
              </div>
            </Section>
          </div>
        </SurroundPortals>
      </LoggedIn>
    </Portal>
    <Portal
      name="user-menu.container.after"
      props={
        {
          "entries": null,
          "handleLogout": [MockFunction],
          "isLoggedIn": true,
          "logout": [MockFunction],
          "user": null,
        }
      }
    />
  </UserMenu>
</Provider>
`;

exports[`<UserMenu /> should render as expected when the user is logged out and the buttons are disabled 1`] = `
<Provider
  store={
    {
      "@@observable": [Function],
      "dispatch": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <UserMenu
    entries={null}
    isLoggedIn={false}
    logout={[Function]}
    user={null}
  >
    <Portal
      name="user-menu.container.before"
      props={
        {
          "entries": null,
          "handleLogout": [Function],
          "isLoggedIn": false,
          "logout": [Function],
          "user": null,
        }
      }
    />
    <Portal
      name="user-menu.container"
      props={
        {
          "entries": null,
          "handleLogout": [Function],
          "isLoggedIn": false,
          "logout": [Function],
          "user": null,
        }
      }
    >
      <Connect(LoggedOut)>
        <LoggedOut
          dispatch={[Function]}
          isDisabled={true}
        >
          <div
            data-test-id="userMenu"
          >
            <Grid
              className="sg-mxubgw-grid theme__more-page__user-menu__container"
            >
              <Grid.Item
                className="sg-u59bcx-gridItem theme__more-page__login-button__container"
              >
                <Button
                  className="sg-1fx370l-button theme__more-page__login-button"
                  color="primary"
                  disabled={true}
                  fullWidth={true}
                  href="/login"
                  testId="UserMenuLogin"
                >
                  <ButtonBase
                    className="engage__button common__button ui-shared__button ui-shared__ripple-button theme__more-page__login-button sg-9awue0-Button-root-Button-contained-Button-disabled-Button-fullWidth-button"
                    data-color="primary"
                    data-full-width={true}
                    data-size="medium"
                    data-variant="contained"
                    disableBaseClassName={true}
                    disableRipple={false}
                    disabled={true}
                    href="/login"
                    testId="UserMenuLogin"
                  >
                    <button
                      className="engage__button common__button ui-shared__button ui-shared__ripple-button theme__more-page__login-button sg-jh6sul-ButtonBase-root-Button-root-Button-contained-Button-disabled-Button-fullWidth-button"
                      data-color="primary"
                      data-full-width={true}
                      data-size="medium"
                      data-test-id="UserMenuLogin"
                      data-variant="contained"
                      disabled={true}
                      onClick={[Function]}
                      onKeyDown={[Function]}
                      onLostPointerCapture={[Function]}
                      onPointerCancel={[Function]}
                      onPointerDown={[Function]}
                      onPointerLeave={[Function]}
                      onPointerUp={[Function]}
                      type="button"
                    >
                      <span
                        className="sg-85tluf-Button-label"
                      >
                        <span
                          className="sg-18jpr3t-Button-loader"
                          style={
                            {
                              "display": "contents",
                            }
                          }
                        />
                        <Text
                          acceptPlainTextWithPlaceholders={false}
                          className={null}
                          params={{}}
                          role={null}
                          string="login.button"
                          transform={null}
                        >
                          login.button
                        </Text>
                      </span>
                      <Ripple
                        ripples={[]}
                      >
                        <span
                          className="sg-sfhzfw-ButtonBaseRipple-container"
                        >
                          <TransitionGroup
                            childFactory={[Function]}
                            component={null}
                            exit={true}
                          />
                        </span>
                      </Ripple>
                    </button>
                  </ButtonBase>
                </Button>
              </Grid.Item>
              <Grid.Item
                className="sg-u59bcx-gridItem theme__more-page-register-button__container"
              >
                <Button
                  className="sg-1fx370l-button theme__more-page-register-button"
                  color="primary"
                  disabled={true}
                  fullWidth={true}
                  href="/register"
                  testId="UserMenuRegister"
                >
                  <ButtonBase
                    className="engage__button common__button ui-shared__button ui-shared__ripple-button theme__more-page-register-button sg-9awue0-Button-root-Button-contained-Button-disabled-Button-fullWidth-button"
                    data-color="primary"
                    data-full-width={true}
                    data-size="medium"
                    data-variant="contained"
                    disableBaseClassName={true}
                    disableRipple={false}
                    disabled={true}
                    href="/register"
                    testId="UserMenuRegister"
                  >
                    <button
                      className="engage__button common__button ui-shared__button ui-shared__ripple-button theme__more-page-register-button sg-jh6sul-ButtonBase-root-Button-root-Button-contained-Button-disabled-Button-fullWidth-button"
                      data-color="primary"
                      data-full-width={true}
                      data-size="medium"
                      data-test-id="UserMenuRegister"
                      data-variant="contained"
                      disabled={true}
                      onClick={[Function]}
                      onKeyDown={[Function]}
                      onLostPointerCapture={[Function]}
                      onPointerCancel={[Function]}
                      onPointerDown={[Function]}
                      onPointerLeave={[Function]}
                      onPointerUp={[Function]}
                      type="button"
                    >
                      <span
                        className="sg-85tluf-Button-label"
                      >
                        <span
                          className="sg-18jpr3t-Button-loader"
                          style={
                            {
                              "display": "contents",
                            }
                          }
                        />
                        <Text
                          acceptPlainTextWithPlaceholders={false}
                          className={null}
                          params={{}}
                          role={null}
                          string="login.signup"
                          transform={null}
                        >
                          login.signup
                        </Text>
                      </span>
                      <Ripple
                        ripples={[]}
                      >
                        <span
                          className="sg-sfhzfw-ButtonBaseRipple-container"
                        >
                          <TransitionGroup
                            childFactory={[Function]}
                            component={null}
                            exit={true}
                          />
                        </span>
                      </Ripple>
                    </button>
                  </ButtonBase>
                </Button>
              </Grid.Item>
            </Grid>
          </div>
        </LoggedOut>
      </Connect(LoggedOut)>
    </Portal>
    <Portal
      name="user-menu.container.after"
      props={
        {
          "entries": null,
          "handleLogout": [Function],
          "isLoggedIn": false,
          "logout": [Function],
          "user": null,
        }
      }
    />
  </UserMenu>
</Provider>
`;

exports[`<UserMenu /> should render as expected when the user is logged out and the buttons are enabled 1`] = `
<Provider
  store={
    {
      "@@observable": [Function],
      "dispatch": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <UserMenu
    entries={null}
    isLoggedIn={false}
    logout={[Function]}
    user={null}
  >
    <Portal
      name="user-menu.container.before"
      props={
        {
          "entries": null,
          "handleLogout": [Function],
          "isLoggedIn": false,
          "logout": [Function],
          "user": null,
        }
      }
    />
    <Portal
      name="user-menu.container"
      props={
        {
          "entries": null,
          "handleLogout": [Function],
          "isLoggedIn": false,
          "logout": [Function],
          "user": null,
        }
      }
    >
      <Connect(LoggedOut)>
        <LoggedOut
          dispatch={[Function]}
          isDisabled={false}
        >
          <div
            data-test-id="userMenu"
          >
            <Grid
              className="sg-mxubgw-grid theme__more-page__user-menu__container"
            >
              <Grid.Item
                className="sg-u59bcx-gridItem theme__more-page__login-button__container"
              >
                <Button
                  className="sg-1fx370l-button theme__more-page__login-button"
                  color="primary"
                  disabled={false}
                  fullWidth={true}
                  href="/login"
                  testId="UserMenuLogin"
                >
                  <ButtonBase
                    className="engage__button common__button ui-shared__button ui-shared__ripple-button theme__more-page__login-button sg-244186-Button-root-Button-contained-Button-fullWidth-button"
                    data-color="primary"
                    data-full-width={true}
                    data-size="medium"
                    data-variant="contained"
                    disableBaseClassName={true}
                    disableRipple={false}
                    disabled={false}
                    href="/login"
                    testId="UserMenuLogin"
                  >
                    <button
                      className="engage__button common__button ui-shared__button ui-shared__ripple-button theme__more-page__login-button sg-1vozyig-ButtonBase-root-Button-root-Button-contained-Button-fullWidth-button"
                      data-color="primary"
                      data-full-width={true}
                      data-size="medium"
                      data-test-id="UserMenuLogin"
                      data-variant="contained"
                      disabled={false}
                      onClick={[Function]}
                      onKeyDown={[Function]}
                      onLostPointerCapture={[Function]}
                      onPointerCancel={[Function]}
                      onPointerDown={[Function]}
                      onPointerLeave={[Function]}
                      onPointerUp={[Function]}
                      type="button"
                    >
                      <span
                        className="sg-85tluf-Button-label"
                      >
                        <span
                          className="sg-18jpr3t-Button-loader"
                          style={
                            {
                              "display": "contents",
                            }
                          }
                        />
                        <Text
                          acceptPlainTextWithPlaceholders={false}
                          className={null}
                          params={{}}
                          role={null}
                          string="login.button"
                          transform={null}
                        >
                          login.button
                        </Text>
                      </span>
                      <Ripple
                        ripples={[]}
                      >
                        <span
                          className="sg-sfhzfw-ButtonBaseRipple-container"
                        >
                          <TransitionGroup
                            childFactory={[Function]}
                            component={null}
                            exit={true}
                          />
                        </span>
                      </Ripple>
                    </button>
                  </ButtonBase>
                </Button>
              </Grid.Item>
              <Grid.Item
                className="sg-u59bcx-gridItem theme__more-page-register-button__container"
              >
                <Button
                  className="sg-1fx370l-button theme__more-page-register-button"
                  color="primary"
                  disabled={false}
                  fullWidth={true}
                  href="/register"
                  testId="UserMenuRegister"
                >
                  <ButtonBase
                    className="engage__button common__button ui-shared__button ui-shared__ripple-button theme__more-page-register-button sg-244186-Button-root-Button-contained-Button-fullWidth-button"
                    data-color="primary"
                    data-full-width={true}
                    data-size="medium"
                    data-variant="contained"
                    disableBaseClassName={true}
                    disableRipple={false}
                    disabled={false}
                    href="/register"
                    testId="UserMenuRegister"
                  >
                    <button
                      className="engage__button common__button ui-shared__button ui-shared__ripple-button theme__more-page-register-button sg-1vozyig-ButtonBase-root-Button-root-Button-contained-Button-fullWidth-button"
                      data-color="primary"
                      data-full-width={true}
                      data-size="medium"
                      data-test-id="UserMenuRegister"
                      data-variant="contained"
                      disabled={false}
                      onClick={[Function]}
                      onKeyDown={[Function]}
                      onLostPointerCapture={[Function]}
                      onPointerCancel={[Function]}
                      onPointerDown={[Function]}
                      onPointerLeave={[Function]}
                      onPointerUp={[Function]}
                      type="button"
                    >
                      <span
                        className="sg-85tluf-Button-label"
                      >
                        <span
                          className="sg-18jpr3t-Button-loader"
                          style={
                            {
                              "display": "contents",
                            }
                          }
                        />
                        <Text
                          acceptPlainTextWithPlaceholders={false}
                          className={null}
                          params={{}}
                          role={null}
                          string="login.signup"
                          transform={null}
                        >
                          login.signup
                        </Text>
                      </span>
                      <Ripple
                        ripples={[]}
                      >
                        <span
                          className="sg-sfhzfw-ButtonBaseRipple-container"
                        >
                          <TransitionGroup
                            childFactory={[Function]}
                            component={null}
                            exit={true}
                          />
                        </span>
                      </Ripple>
                    </button>
                  </ButtonBase>
                </Button>
              </Grid.Item>
            </Grid>
          </div>
        </LoggedOut>
      </Connect(LoggedOut)>
    </Portal>
    <Portal
      name="user-menu.container.after"
      props={
        {
          "entries": null,
          "handleLogout": [Function],
          "isLoggedIn": false,
          "logout": [Function],
          "user": null,
        }
      }
    />
  </UserMenu>
</Provider>
`;
